# logica-website

./: CMakeLists.txt  LICENSE  README.txt  docs.html  download.html  index.html  logica-installer.iss  package.json  server.js  styles.css  test.lg
logica-website/: index.html  package-lock.json  package.json
src/: SendHandler.cpp  SendHandler.h  interpreter.cpp  interpreter.h  main.cpp  runner.cpp  runner.h
